Quarkus app update